--- a/04_manuscripts/Final_Manuscript.Rmd
+++ b/04_manuscripts/Final_Manuscript.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Differential photosynthetic capacity and carbon allocation strategies in yellow birch in Quebec
+title: Differential photosynthetic capacity and carbon allocation strategies for yellow birch along a latitudinal gradient in Quebec
 author: "Lukas Van Riel"
 date: "2023-09-28"
 csl: References/ecology-letters.csl
@@ -61,7 +61,7 @@ In case of data normality, a multi-way ANOVA test [and possibly Tukey tests, @ab
 
 The fitting procedure is illustrated in the following figure.
 
-![Leaf photosynthesis---CO2 response curve as modelled with the FvCB model. Black dots represent the gas exchange measurements. The blue curve represents the fitted gross photosynthesis rate when Rubisco activity is limiting, the red curve when RuBP-regeneration is limiting. The resulting best fit line (black) is the minimal of both curves.](images/VanRiel_Single_plot.png){width="700"}
+![Leaf photosynthesis---CO2 response curve as modelled with the FvCB model. Black dots represent the gas exchange measurements. The blue curve represents the fitted gross photosynthesis rate when Rubisco activity is limiting, the red curve when RuBP-regeneration is limiting. The resulting best fit line (black) is the minimal of both curves.](images/VanRiel_Single_plot.png){width="400"}
 
 ## Parameter output
 
@@ -86,13 +86,13 @@ The following table displays the resulting Vcmax and Jmax values from fitting al
 
 ## ANOVA
 
-The one-way ANOVA analyses revealed that there was no significant difference for Vcmax between the studied adult and juvenile yellow birch trees (F = 3.734, p = 0.541). For Jmax, he one-way ANOVA revealed that there was a weakly significant difference between the two life stages (F = 4.199, p = 0.0411).
+The one-way ANOVA analyses revealed that there was no significant difference for Vcmax between the studied adult and juvenile yellow birch trees (F = 0.26, p = 0.615) as well as for the one-way ANOVA on the Jmax (F = 0.29, p = 0.595).
 
 This can also be seen in the following two figures that display the Vcmax and Jmax distributions grouped by life stage.
 
-![Boxplot of the Vcmax values, grouped by life stage. 0 refers to juvenile trees, 1 to adult trees.](images/VanRiel_Vcmax_boxplot.png){width="400"}
+![Boxplot of the Vcmax values, grouped by life stage. 0 refers to juvenile trees, 1 to adult trees.](images/VanRiel_Vcmax_boxplot.png){width="300"}
 
-![Boxplot of the Jmax values, grouped by life stage. 0 refers to juvenile trees, 1 to adult trees.](images/VanRiel_Jmax_boxplot.png){width="400"}
+![Boxplot of the Jmax values, grouped by life stage. 0 refers to juvenile trees, 1 to adult trees.](images/VanRiel_Jmax_boxplot.png){width="300"}
 
 # Discussion
 
