--- a/Preregistration/PreRegistration.Rmd
+++ b/Preregistration/PreRegistration.Rmd
@@ -1,6 +1,6 @@
 ---
-title           : "Differential photosynthetic capacity and carbon allocation strategies in yellow birch in Quebec"
-shorttitle      : "My preregistration"
+title           : "Differential photosynthetic capacity and carbon allocation strategies for yellow birch along a latitudinal gradient in Quebec"
+shorttitle      : "Yellow birch photosynthesis preregistration"
 date            : "`r Sys.setlocale('LC_TIME', 'C'); format(Sys.time(), '%d\\\\. %B %Y')`"
 
 author: 
